--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 
 body {
     margin: 0;
+    background-color: #F1F1F1;
     margin-bottom: 100px;
     display: flex;
     flex-direction: column;
@@ -56,9 +57,10 @@ body {
 
 #display {
     display: flex;
+    flex-direction: column;
     align-items:flex-end;
     justify-content: flex-end;
-    font-size: 2.5rem;
+    gap: 1rem;
     padding: 1rem;
     min-width: 482px;
     max-width: 482px;
@@ -71,6 +73,19 @@ body {
     margin-right: 8px;
     margin-left: 8px;
     border: 3px solid black;
+    overflow: hidden;
+}
+
+#display-up{
+    font-size: 1.5rem;
+    font-family: 'Handjet', cursive;
+    font-family: 'Orbitron', sans-serif;
+}
+
+#display-down{
+    font-size: 3rem;
+    font-family: 'Handjet', cursive;
+    font-family: 'Orbitron', sans-serif;
 }
 
 #body {
@@ -88,6 +103,10 @@ body {
     background-color: rgb(209, 207, 207);
     border: 2px solid black;
     cursor: pointer;
+}
+
+#body button:hover{
+    opacity: 75%;
 }
 
 #body button:active{
