--- a/style.css
+++ b/style.css
@@ -77,6 +77,8 @@ body {
 }
 
 #display-up{
+    position: absolute;
+    top: 140px;
     font-size: 1.5rem;
     font-family: 'Handjet', cursive;
     font-family: 'Orbitron', sans-serif;
